--- a/workdaystyle.css
+++ b/workdaystyle.css
@@ -84,3 +84,20 @@ input {
   display: inline-block;
   font-size: 1em;
 }
+
+.wrapper
+{ 
+  padding: 20px;     
+} 
+
+@keyframes shadow-pulse
+{
+  0% {
+    box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.2);
+  }
+  100% {
+    box-shadow: 0 0 0 35px rgba(0, 0, 0, 0);
+  }
+
+
+
