--- a/workdaystyle.css
+++ b/workdaystyle.css
@@ -85,6 +85,67 @@ input {
   font-size: 1em;
 }
 
+
+.dailyPlan {
+  color: black;  
+  font-size: 15pt;
+  height:100%;
+  width: 100%;
+}
+
+.saveIcon {
+  background-color: magenta;
+  color: black;
+  border-radius: 0px 15px 15px 0px;
+  
+  font-size: 1.5em;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+
+.footer {
+  /* set text properties */
+  background-color: white;
+  
+  /* sets height of footer*/
+  height: 10%;
+  
+  /* sets properties for footer border*/
+  border-top: solid;
+  border-top-color: white;  
+  border-top-width: 8px;
+}
+
+.footer-text, .header-text {
+  /* forces text across the entire screen so it has a center */
+  width: 100%;
+  text-align: center;
+
+  font-size: 10px;
+  color:linen; 
+}
+
+
+@media (max-width: 768px) {
+  .container-fluid {
+    
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .plannerRow {
+    height: 100%;
+    border-radius: 10;
+    margin: 10px;
+  }
+
+  .saveIcon { border-radius: 0 0 15px 15px; }
+
+  .timeBox { border-radius: 15px 15px 0 0; }
+}
+
+
+
 .wrapper
 { 
   padding: 20px;     
@@ -98,6 +159,5 @@ input {
   100% {
     box-shadow: 0 0 0 35px rgba(0, 0, 0, 0);
   }
-
 
 
